# model-router

./: .env.example  .gitignore  docker-compose.yml
.github/workflows/: ci.yml
app/: Dockerfile  admin.py  auth.py  cache.py  circuit_breaker.py  config_loader.py  main.py  metrics.py  pyproject.toml  requirements-dev.txt  requirements.txt  router.py  tracing.py
app/eval/: __init__.py  judge.py  llm_judge.py  rules.py
app/providers/: __init__.py  base.py  gemini_provider.py  groq_provider.py  ollama_provider.py
app/tests/: conftest.py  test_eval.py  test_providers.py  test_router.py
config/: models.yaml  policy.yaml
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/dashboards-json/: router-dashboard.json
prometheus/: alerts.yml  prometheus.yml
